# ragas-lingua

./: .gitignore  LICENSE  README.md  ROADMAP.md  plan.html  pyproject.toml
.github/workflows/: ci.yml
bench/: compare_ragas.py  run_faithfulness.py
bench/gold/: answer_correctness_sv.jsonl  faithfulness_sv.jsonl
docs/: AUTOGENERATED_TRANSLATIONS.md
examples/: 01_quickstart.py  02_diagnose.py  03_bring_your_own_rag.py  04_from_ragas.py  05_add_a_language.py  06_offline_with_fakejudge.py  07_confidence.py  08_cache_and_concurrency.py
src/ragas_lingua/: __init__.py  _concurrent.py  confidence.py  dataset.py  diagnose.py  evaluate.py  judge.py  language.py  promptpacks.py
src/ragas_lingua/metrics/: __init__.py  _answer_correctness.py  _answer_relevancy.py  _context_precision.py  _faithfulness.py  base.py
src/ragas_lingua/prompts/: da.toml  de.toml  fi.toml  is.toml  no.toml  sv.toml
tests/: test_caching_judge.py  test_claude_judge.py  test_concurrency.py  test_confidence.py  test_dataset.py  test_diagnose.py  test_examples.py  test_judge.py  test_languages.py
tests/languages/: test_german.py  test_swedish.py
tests/metrics/: test_answer_correctness.py  test_answer_relevancy.py  test_context_precision.py  test_faithfulness.py
