[project]
name = "ragas-lingua"
version = "0.1.0"
description = "Language-aware RAG evaluation for Swedish and the Nordics — a RAGAS-compatible evaluator with native judge prompts and Claude as the LLM-judge."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cornelii Sandberg", email = "corresandberg@gmail.com" }]
keywords = ["rag", "evaluation", "ragas", "llm", "multilingual", "swedish", "nordic", "hallucination", "faithfulness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Natural Language :: Swedish",
]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2",
]

[project.optional-dependencies]
ragas = ["ragas>=0.2", "langchain-anthropic>=0.2"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/CornElDos/ragas-lingua"
Issues = "https://github.com/CornElDos/ragas-lingua/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragas_lingua"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
